@startuml
entity "Answer" as answer {
  *id : Long
  *content : String
  *description: String
}

entity "Response" as response {
  *id : Long
}

entity "AppUser" as user{
  *id : Long
  *password : String
  *username: String
}

entity "Survey" as survey {
  *id : Long
  *closed : boolean
  *title: String
}

entity "Question" as question {
  *id : Long
  *prompt : String
  *type: QuestionType
}

entity "RadioChoiceQuestion" as rcq {
  *choices : String[]
}

entity "LongAnswerQuestion" as laq {
  *charLimit : int
}

entity "RangeQuestion" as rq {
  *increment: int
  *lower: int
  *upper: int
}

user ||--|{ survey
survey ||--|{ question
survey ||--|{ response
response||--|{ answer
question <|-- laq
question <|-- rcq
question <|-- rq
@enduml